--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "csv": "^5.1.1",
+    "csv-parser": "^2.3.0",
     "express": "^4.17.1"
   }
 }
