--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^2.3.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "memory-cache": "^0.2.0"
   }
 }
